--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>图片LSB查看器</title>
+    <title>隐形水印检测工具</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 
@@ -13,7 +13,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg sticky-top navbar-light bg-blur justify-content-between">
-        <a class="navbar-brand" href="/">图片LSB查看器</a>
+        <a class="navbar-brand" href="/">隐形水印检测工具</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="切换导航">
             <span class="navbar-toggler-icon"></span>
@@ -27,9 +27,6 @@
                         关于
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#" data-toggle="modal" data-target="#aboutModal">这是什么？</a>
-                        <a class="dropdown-item" href="https://im.daidr.me" target="_blank">戴兜的小屋</a>
-                        <a class="dropdown-item" href="https://github.com/daidr/ImageLSBViewer-Web"
                             target="_blank">Github</a>
                     </div>
                 </li>
@@ -61,11 +58,10 @@
                         <h5 class="modal-title" id="aboutModalLabel">这是什么？</h5>
                     </div>
                     <div class="modal-body">
-                        <p>图片LSB查看器类似于StegSolve，能够查看图片各通道的最低位(LSB)信息，做成网页的形式方便大家使用。</p>
+                        <p>隐形水印检测工具，支持对截图进行隐藏水印检测</p>
                         <p>现在只支持 R/G/B/A Plane 0/1/2 模式，之后会添加更多模式<b><del>咕咕咕</del></b></p>
-                        <p>发现BUG可以发<a class="text-secondary" href="https://github.com/daidr/ImageLSBViewer-Web/issues"
-                                target="_blank">issue</a>反馈，如果觉得不错，请给我一个star⭐</p>
-                        <p class="text-right"><small class="text-muted">—— 戴兜 写于 2020/1/25</small></p>
+                        <p>感谢daidr开源<a class="text-secondary" href="https://github.com/daidr/ImageLSBViewer-Web/issues"
+                                target="_blank">issue</a>反馈，如果觉得不错，请关注他star⭐</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
@@ -76,10 +72,6 @@
     </main>
 
     <footer class="text-center">
-        <p>Coded By <a class="text-secondary" href="https://im.daidr.me" target="_blank">DaiDR</a> With ❤️</p>
-        <p><a class="text-secondary" href="https://daidr.me" target="_blank">Blog</a> | <a class="text-secondary"
-                href="https://github.com/daidr/ImageLSBViewer-Web" target="_blank">Github</a> | <a
-                class="text-secondary" href="https://weibo.com/keaidaidou" target="_blank">Weibo</a>
         </p>
     </footer>
     <script src="js/jquery-3.4.1.slim.min.js"></script>
